k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: flexblankett
spec:
  redirectScheme:
    scheme: https
    permanent: true
