k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flexblankett
  namespace: flexblankett
spec:
  selector:
    app: flexblankett
  ports:
    - port: 80
      targetPort: 5000
